--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
